--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "license": "MIT",
   "dependencies": {
     "cloudtuya": "https://github.com/unparagoned/cloudtuya",
+    "config": "^3.1.0",
     "mqtt": "^2.18.8"
   }
 }
