add a timeout for tuya refreshes, so that the process doesn't get stuck if a single request never resolves

--- a/config/example.json5
+++ b/config/example.json5
@@ -1,6 +1,7 @@
 {
   "misc": {
     "refreshIntervalMs": 300000,
+    "refreshTimeoutMs": 60000,
   },
   "tuya": {
     "userName": "username@example.com",
