--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node tuya_to_mqtt.js"
   },
   "dependencies": {
-    "cloudtuya": "https://github.com/mattbroussard/cloudtuya#us-region-fix",
+    "cloudtuya": "git+https://github.com/unparagoned/cloudtuya#bc13caa",
     "config": "^3.1.0",
     "debug": "^4.1.1",
     "lodash": "^4.17.21",
